<resources>
    <string name="app_name" translatable="false">eyeBOX</string>
    <string name="action_settings">Settings</string>
    <string name="proceed">proceed</string>
    <string name="search">Search</string>
    <string name="client">Client</string>
    <string name="balance">Balance</string>
    <string name="sign_out">Sign Out</string>
    <string name="client_transactions">Client Transactions</string>
    <string name="payments">Payments</string>
    <string name="visits">Visits</string>
    <string name="all_rights_reserve">eyeBOX | All Rights Reserved (2016)</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">Signing in…</string>
    <string name="footer">Footer</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="total_payment">Total Payment</string>
    <string name="loading_data">Loading data…</string>
    <string name="failed_loading_data">Failed to load data</string>
    <string name="pay_selected">PAY SELECTED</string>
    <string name="payment_transactions">Payment Transactions</string>
    <string name="products">Products</string>
    <string name="client_visits">Client Visits</string>
    <string name="sync">sync</string>
    <string name="select_module_to_sync">Select Module to Sync</string>
    <string name="client_transaction_details">Client Transaction Details</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="payment_added">Payment Added</string>
    <string name="check_if_any_brand">Check if Any Brand</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_from_cart">REMOVE FROM CART</string>
    <string name="send_order">SEND ORDER</string>
    <string name="sales">SALES</string>
    <string name="submit_payments">SUBMIT PAYMENTS</string>
    <string name="delete">Delete</string>
    <string name="required">Required!</string>
    <string name="are_you_sure_you_want_to_continue">Are you sure you want to continue?</string>
    <string name="submit_orders">SUBMIT ORDERS</string>
    <string name="confirm_signout">Confirm Sign Out</string>
    <string name="submit_visits">SUBMIT VISITS</string>
    <string name="select_client_transaction">Select Client Transaction</string>
    <string name="select_client">Select Client</string>
    <string name="orders">Orders</string>
    <string name="select_product">Select Product</string>
    <string name="view_cart">View Cart</string>
    <string name="payment_breakdown">Payment Breakdown</string>
    <string name="select_template">Select Template</string>
    <string name="select_printer">Select Printer</string>
</resources>
